[mod] 최종본 수정 완료

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
       <p class="status open">2월 ~ 3월 한정 게스트비 무료 이벤트 진행중!!</p>
       <ul class="info-list">
         <li>✔ 금요일 / 일요일</li>
-        <li>✔ 19:00 – 22:00 (금요일) / 14:00 – 18:00 (일요일)</li>
-        <li>✔ 남/여 각 3명씩 (인원 미충족시 성별 무관 5명)</li>
-        <li>✔ 특별히 올해는 게스트 참여 횟수 제한이 없습니다!</li>
-
+        <li>✔ 19:00 – 22:00 (금) / 14:00 – 18:00 (일)</li>
+        <li>✔ 남 / 여 각 3명씩 (인원 미충족시 성별 무관 5명)</li>
+        <li>✔ 2026년 한정, 게스트 참여 횟수 제한 없음</li>
       </ul>
     </section>
 
@@ -54,20 +53,20 @@
       <h2>브이홀릭 정보</h2>
       <ul class="info-list">
         <li>🏐 요일: 화요일(레슨) / 금요일 / 일요일</li>
-        <li>⏰ 시간: 19:00 – 22:00 (평일) / 14:00 – 18:00 (주말)</li>
+        <li>⏰ 시간: 19시 – 22시 (평일) / 14시 – 18시 (주말)</li>
         <li>📍 장소: 하탑초등학교 (야탑역 3번 출구 도보 10분)</li>
+        <li>💰 회비: 월 4만 원 (가입비 별도)</li>
       </ul>
     </section>
 
 
     <!-- 안내 -->
     <section class="card">
-      <h2>가입/게스트 안내사항</h2>
+      <h2>가입 / 게스트 안내사항</h2>
       <ul class="info-list">
         <li>✔ 20세 이상 / 군필자</li>
-        <li>✔ 경력자</li>
-        <li>✔ 경력자 기준: 1년 이상의 배구 경험, 서브 / 리시브 가능</li>
-        <li>✔ DM 양식: 이름 나이 성별 경력 방문날짜</li>
+        <li>✔ 1년 이상의 배구 경험, 서브 / 리시브 가능자</li>
+        <li>✔ DM 양식: [이름 나이 성별 경력 방문날짜]</li>
       </ul>
     </section>
 
